--- a/package.json
+++ b/package.json
@@ -13,15 +13,25 @@
     "build": "rimraf dist && yarn build::main",
     "build::main": "tsc -p tsconfig.build.json",
     "build::dev": "tsc -p tsconfig.build.json --watch",
-    "doc": "npx typedoc --out docs src"
+    "doc": "npx typedoc --out docs src",
+    "unit": "jest --forceExit",
+    "lint": "eslint --ext .ts --ext .tsx "
   },
   "engines": {
     "node": ">=18.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.3",
+    "eslint": "^9.29.0",
+    "globals": "^16.2.0",
+    "jest": "^30.0.2",
     "node": "^24.2.0",
-    "ts-node": "^10.9.2"
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.0"
   },
   "dependencies": {
     "crc": "^4.3.2",
