--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^24.0.3",
     "eslint": "^9.29.0",
     "globals": "^16.2.0",
+    "husky": "^9.1.7",
     "jest": "^30.0.2",
     "node": "^24.2.0",
     "ts-jest": "^29.4.0",
