--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "husky": "^9.1.7",
     "jest": "^30.0.2",
     "node": "^24.2.0",
+    "rimraf": "^5.0.10",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
