--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,13 +1,19 @@
 {
-	"include": ["src/**/*.ts"],
-	"exclude": ["node_modules/**", "src/**/*spec.ts", "src/**/__tests__/*", "src/**/__mocks__/*", "scratch/**"],
-	"compilerOptions": {
-		"outDir": "./dist",
-		"baseUrl": "./",
-		"paths": {
-			"*": ["./node_modules/*"],
-			"atem-connection": ["./src/index.ts"]
-		},
-		"types": ["node"]
-	}
+  "include": ["src/**/*.ts"],
+  "exclude": [
+    "node_modules/**",
+    "src/**/*spec.ts",
+    "src/**/__tests__/*",
+    "src/**/__mocks__/*",
+    "scratch/**"
+  ],
+  "compilerOptions": {
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "paths": {
+      "*": ["./node_modules/*"],
+      "atem-connection": ["./src/index.ts"]
+    },
+    "types": ["node"]
+  }
 }
