--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+      - name: Enable Corepack
+        run: corepack enable
       - name: Use Node.js 18.x
         uses: actions/setup-node@v4
         with:
@@ -51,6 +53,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+      - name: Enable Corepack
+        run: corepack enable
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
