--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "engines": {
     "node": ">=18.0"
   },
+  "files": [
+    "/dist",
+    "/README.md",
+    "/LICENSE"
+  ],
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/jest": "^30.0.0",
