--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -59,7 +59,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
+          cache: "yarn"
       - name: Prepare Environment
         run: |
           yarn install --immutable
